--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "dependencies": {
     "react": "^16.6.3",
+    "react-app-rewire-workbox": "^2.0.1",
+    "react-app-rewired": "^1.6.2",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-script": "^2.0.5",
+    "react-scripts": "2.1.1",
+    "semantic-ui-react": "^0.83.0",
+    "workbox-webpack-plugin": "^3.6.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
