--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "adhan": "3.0.0",
     "react": "16.5.2",
     "react-dom": "16.5.2",
-    "react-scripts": "2.0.3"
+    "react-scripts": "2.0.3",
+    "weather-icons-react": "latest"
   },
   "devDependencies": {},
   "scripts": {
