--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.8.1",
     "react-dom": "16.8.1",
     "react-scripts": "2.0.3",
+    "sunrise-sunset-js": "2.0.0",
     "weather-icons-react": "latest"
   },
   "devDependencies": {},
