html5 geolocation included, api key hidden in env file, icon added.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,13 +3,14 @@
   "name": "Find prayer time in your city",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "favicon.png",
+      "sizes": "144x144 64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
   ],
   "start_url": ".",
   "display": "standalone",
+  "orientation": "portrait",
   "theme_color": "#4489fe",
   "background_color": "#e4e8f1"
 }
