--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "2.24.0",
     "react": "16.8.1",
     "react-dom": "16.8.1",
+    "react-icons-kit": "^1.2.1",
     "react-scripts": "2.0.3",
     "sunrise-sunset-js": "2.0.0",
     "weather-icons-react": "latest"
