location permission screen added, localstorage introduced, refactored

--- a/src/AppConfig.json
+++ b/src/AppConfig.json
@@ -7,5 +7,10 @@
         "maghrib",
         "isha",
         "midnight"
-    ]
+    ],
+    "storagePrefix": "prayertime",
+    "storageKeys": {
+        "position": "position",
+        "locationName": "locationName"
+    }
 }
