major change in structure. working on settings page.

--- a/src/AppConfig.json
+++ b/src/AppConfig.json
@@ -11,6 +11,7 @@
     "storagePrefix": "prayertime",
     "storageKeys": {
         "position": "position",
-        "locationName": "locationName"
+        "place": "place",
+        "settings": "settings"
     }
 }
