settings is done

--- a/src/AppConfig.json
+++ b/src/AppConfig.json
@@ -12,6 +12,6 @@
     "storageKeys": {
         "position": "position",
         "place": "place",
-        "settings": "settings"
+        "selectedSettingsOptions": "selectedSettingsOptions"
     }
 }
