--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "adhan": "3.0.0",
     "axios": "0.18.0",
+    "browserslist": "^4.5.6",
+    "caniuse-lite": "^1.0.30000966",
     "geolocator": "2.1.5",
     "hijrah-date": "1.0.3",
     "moment": "2.24.0",
