homepage url updated

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "keywords": [],
-  "homepage": "/prayer-time",
+  "homepage": "/",
   "main": "src/index.js",
   "dependencies": {
     "adhan": "3.0.0",
