Change theme color and style

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,6 +21,6 @@
   "start_url": ".",
   "display": "standalone",
   "orientation": "portrait",
-  "theme_color": "#4489fe",
+  "theme_color": "#e4e8f1",
   "background_color": "#e4e8f1"
 }
